tests/miniJava/neg/005365_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { true public int [] java ( ) { return 0 ; } }
